fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gbp-fe
  labels:
    app: gbp-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gbp-fe
  template:
    metadata:
      labels:
        app: gbp-fe
    spec:
      containers:
        - name: gbp-fe
          image: frostwyrm9x/gbp_fe:prod
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gbp-fe-service
spec:
  type: NodePort
  selector:
    app: gbp-fe
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
