ws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gbp-ws
  labels:
    app: gbp-ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gbp-ws
  template:
    metadata:
      labels:
        app: gbp-ws
    spec:
      containers:
        - name: gbp-ws
          image: frostwyrm9x/gbp-ws:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gbp-ws-service
spec:
  type: NodePort
  selector:
    app: gbp-ws
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
