ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gbp-ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_http_version 1.1;
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "upgrade";
      proxy_set_header Host $host;
spec:
  rules:
    - http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: gbp-ws-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gbp-fe-service
                port:
                  number: 3000
